--- a/styles/main.scss
+++ b/styles/main.scss
@@ -183,6 +183,14 @@ a.read-on {
   font-size: 1.5rem;
   margin-top: 2rem;
 }
+a.github {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  width: 2rem;
+  height: 2rem;
+}
+
 
 section {
   border: 1px solid $brand-color;
