--- a/styles/main.scss
+++ b/styles/main.scss
@@ -29,6 +29,15 @@ h1 {
     padding: 1rem;
     border: 1px solid hsl($brand-hue, 20%, 90%);
     background-color: rgba(#fff, 0.6);
+    display: flex;
+    flex-direction: column;
+    footer {
+      margin-top: auto;
+      font-size: 0.8rem;
+      color: hsl($brand-hue, 40%, 60%);
+      display: flex;
+      justify-content: space-between;
+    }
     h4 {
 
       margin-top: 0;
