--- a/styles/main.scss
+++ b/styles/main.scss
@@ -98,6 +98,7 @@ body {
     font-size: 0.8rem;
   }
 }
+p code,
 code.code {
   background-color: hsl($brand-hue, 30%, 95%);
   border: 1px solid hsl($brand-hue, 40%, 90%);
