--- a/styles/main.scss
+++ b/styles/main.scss
@@ -22,22 +22,18 @@ body {
     padding: 1rem;
     border: 1px solid hsl($brand-hue, 20%, 80%);
     background-color: rgba(#fff, 0.6);
+    max-height: calc(100vh - 2rem);
+    overflow-y: scroll;
     display: flex;
     flex-direction: column;
-    footer {
-      margin-top: auto;
-      font-size: 0.8rem;
-      color: $brand-light;
-      display: flex;
-      justify-content: space-between;
-    }
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.05);
     h4 {
       margin-top: 0;
       margin-bottom: 0.5rem;
     }
     ul.menu {
       padding: 0;
-      margin: 0 0 2rem 0;
+      margin: 0 0 0.5rem 0;
       list-style: none;
       li {
         margin: 0;
@@ -47,13 +43,37 @@ body {
           background-color: rgba(#fff, 0.6);
           padding: 0.25rem 0.5rem;
           margin-bottom: 0.25rem;
+          border-left: 5px solid white;
           &:hover {
             background-color: rgba(#fff, 0.8);
+            border-left-color: hsl($brand-hue, 40%, 80%);
           }
           &.active {
             background-color: rgba(#fff, 1);
+            border-left-color: hsl($brand-hue, 60%, 60%);
           }
         }
+      }
+    }
+    footer {
+      margin-top: auto;
+      a {
+        font-size: 0;
+        width: 6rem;
+        transition: color 300ms;
+        &:hover {
+          color: $brand-darkish;
+        }
+      }
+      img {
+        height: 2rem;
+      }
+      .notes {
+        font-size: 0.8rem;
+        color: $brand-light;
+        display: flex;
+        align-items: flex-end;
+        justify-content: space-between;
       }
     }
   }
@@ -62,9 +82,17 @@ body {
     flex-basis: 0;
     flex-grow: 999;
     padding: 2rem;
-    padding-bottom: 200px;
+    // padding-bottom: 200px;
     background-color: rgba(#fff, 0.9);
     border: 1px solid hsl($brand-hue, 20%, 80%);
+    max-height: calc(100vh - 2rem);
+    overflow-y: scroll;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    .body {
+      min-height: calc(100vh - 2rem - 210px);
+    }
     h1:first-child {
       line-height: 1;
       margin: 0 0 0.5em 0;
@@ -75,18 +103,20 @@ body {
   display: grid;
   grid-template-columns: 1fr 4fr;
   gap: 3rem;
-  img {
-    margin-top: 1rem;
+  align-items: start;
+  div.logo {
+    padding-top: 2rem;
+    svg {
+      color: hsl($brand-hue, 80%, 20%);
+    }
   }
   & > div.blurb {
     padding-right: 2rem;
   }
 }
 .badger {
-  position: absolute;
-  bottom: 1rem;
-  left: 0;
   width: 100%;
+  margin-top: auto;
   padding-top: 2rem;
   text-align: center;
   img {
@@ -108,6 +138,9 @@ code.code {
 }
 img.logo {
   width: 200px;
+}
+div.codeblock {
+  font-size: 0.9rem;
 }
 div.example {
   h4 {
@@ -146,4 +179,33 @@ a.github {
   right: 1rem;
   width: 2rem;
   height: 2rem;
+}
+
+@media only screen and (max-width: 960px) {
+  #layout {
+    flex-direction: column;
+    aside {
+      flex-basis: 12rem;
+      flex-basis: 1;
+      h4 {
+        font-size: 0.8rem;
+        margin-top: -0.5rem;
+      }
+      ul.menu {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(20ch, 1fr));
+        gap: 0.25rem 0.5rem;
+        li {
+          font-size: 0.9rem;
+        }
+        //grid-template-columns: repeat(5, 1fr);
+      }
+    }
+    h1 {
+      font-size: 1.5rem;
+    }
+    a.read-on {
+      font-size: 1.25rem;
+    }
+  }
 }
