--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,8 @@
 @import "config/all.scss";
 @import "components/all.scss";
 
+$codeblock-radius: 5px;
+
 html {
   font-family: $font-sans;
 }
@@ -143,7 +145,24 @@ div.codeblock {
   }
 }
 div.example {
-  h4 {
+  margin-bottom: 1rem;
+  .code {
+    position: relative;
+  }
+  .explanation {
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+  }
+  .output {
+    position: relative;
+    background-color: hsl($brand-hue, 40%, 20%);
+    color: hsl($brand-hue, 10%, 90%);
+    padding: 1rem 2rem;
+    font-size: 1.2em;
+    border-radius: 0.25rem;
+    margin-top: 1rem;
+  }
+  h4.caption {
     font-size: 0.8rem;
     margin: 0;
     text-align: right;
@@ -153,22 +172,51 @@ div.example {
     top: 0.5rem;
     right: 1rem;
   }
-  .explanation {
-    margin-top: 2rem;
-    margin-bottom: 1rem;
+}
+div.codeblock {
+  font-size: 0.9rem;
+  position: relative;
+  padding: 0;
+  margin-top: 1rem;
+  h4.caption {
+    position: absolute;
+    top: 0.5rem;
+    right: 1rem;
+    font-size: 0.8rem;
+    margin: 0;
+    text-align: right;
+    font-weight: normal;
+    color: rgba(255, 255, 255, 0.9);
   }
-  .code {
-    position: relative;
+  pre {
+    border-radius: $codeblock-radius;
+    margin: 0 !important;
   }
-  .output {
-    position: relative;
-    background-color: hsl($brand-hue, 40%, 20%);
-    color: hsl($brand-hue, 10%, 90%);
-    padding: 1rem 2rem;
-    font-size: 1.25em;
-    border-radius: 0.25rem;
+  .clipboard {
+    position: absolute;
+    bottom: 0rem;
+    right: 0rem;
+    margin: 0;
+    padding: 0.25em 0.5em;
+    min-width: 8ch;
+    text-align: center;
+    color: white;
+    background-color: hsl($brand-hue, 90%, 30%);
+    border-radius: $codeblock-radius 0 $codeblock-radius 0;
+    font-size: 0.8rem;
+    transition: all 1s;
+    &:hover {
+      transition: all 0.2s;
+      background-color: hsl($hover-hue, 90%, 40%);
+      cursor: pointer;
+    }
+    &.copied {
+      background-color: hsl(120, 70%, 30%);
+      cursor: pointer;
+    }
   }
 }
+
 a.read-on {
   display: block;
   text-align: right;
